# Computer-Graphics-Project

./: .gitignore  CMakeLists.txt  Computer-Graphics-Project2D.code-workspace  Makefile  README.md  camera.cpp  character.cpp  enemy.cpp  main.cpp  map.cpp  platform.cpp  run.app  shot.cpp  trabalhocg
Project2D/: map.cpp  platform.cpp  shot.cpp
Project2D/headers/: enemy.h
Project3D/: CMakeLists.txt  camera.cpp  character.cpp  enemy.cpp  geom_draw.cpp  imageloader.cpp  main.cpp  map.cpp  platform.cpp  shot.cpp  trabalhocg
Project3D/headers/: character.h  collision.h  enemy.h  geom_draw.h  map.h  platform.h  shot.h  utils.h
headers/: camera.h  character.h  enemy.h  map.h  platform.h  shot.h  utils.h
